<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pinit.pinitmobile.ui.EditAccountFragment"
    android:background="@android:color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/email"
                        android:id="@+id/textView10"
                        android:layout_weight="1"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Medium Text"
                        android:id="@+id/email"
                        android:layout_weight="1" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/nick"
                        android:id="@+id/textView5"
                        android:layout_weight="1"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/nick"
                        android:layout_weight="1" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/firstName"
                        android:id="@+id/textView11"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/first_name"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/lastName"
                        android:id="@+id/textView13"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/last_name"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/phoneNumber"
                        android:id="@+id/textView15"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/phone_no"
                        android:layout_weight="1" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_photo"
                    android:layout_gravity="center"
                    android:layout_marginRight="30dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/person_photo" />

                <Button
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_photo"
                    android:id="@+id/change_photo"
                    android:layout_gravity="bottom" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/save"
                android:layout_gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/divider"
                android:background="@color/dark_green"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/change_password"
                android:id="@+id/change_passord_tv"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:ems="10"
                android:id="@+id/old_password"
                android:hint="@string/old_password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:ems="10"
                android:id="@+id/new_password"
                android:hint="@string/new_password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:ems="10"
                android:id="@+id/repeated_password"
                android:hint="@string/repeat_password" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/change_password"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:visibility="gone"/>

</FrameLayout>
