<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.pinit.pinitmobile.ui.AddEventFragment"
    style="@style/_PinItTheme"
    android:background="@android:color/white">


    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_name"
            android:hint="@string/event_name"
            android:paddingTop="10dp"
            android:textColor="@color/dark_grey"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/address"
            android:id="@+id/textView9"
            android:layout_marginLeft="15dp"
            android:textColor="@color/dark_grey"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/address_text_view"
                android:textColor="@color/dark_grey"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:layout_gravity="center"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search_location_button"
                android:background="@drawable/ic_search_green_36dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/time_start"
            android:id="@+id/textView8"
            android:layout_marginLeft="15dp"
            android:textColor="@color/dark_grey"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/time_start"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="30dp"
                android:layout_weight="1"
                android:textColor="@color/dark_grey"
                android:layout_gravity="center"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_picker_button"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/ic_access_time_green_36dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/type"
                android:id="@+id/textView6"
                android:paddingRight="70dp"
                android:textColor="@color/dark_grey"
                android:layout_gravity="center"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/type_spinner"
                android:paddingLeft="20dp"
                android:layout_gravity="right"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/group"
                android:id="@+id/textView7"
                android:textColor="@color/dark_grey"
                android:paddingRight="50dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/group_spinner"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="right"
                android:textColor="@color/dark_grey"
                android:layout_weight="1" />
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/dark_grey"
            android:text="@string/private_event"
            android:id="@+id/is_private_event"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description"
            android:id="@+id/textView2"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark_grey"
            android:layout_marginLeft="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/event_description"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/dark_grey"
            android:layout_marginLeft="15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/add_button"
            android:layout_gravity="center"
            android:paddingLeft="40dp"
            android:paddingRight="40dp" />

    </LinearLayout>

</FrameLayout>
